# object-tracker

./: .gitignore  README.md  pyproject.toml
api/: db.py  main.py  models.py  routes.py  schemas.py  storage.py
pipeline/: aggregator.py  detector.py  frame_reader.py  hands.py  interaction.py  keyframes.py  motion.py  orchestrator.py
scripts/: run_local.sh
tests/: conftest.py  test_aggregator.py  test_api.py  test_api_client.py  test_detector.py  test_frame_reader.py  test_hands.py  test_interaction.py  test_keyframes.py  test_motion.py  test_orchestrator.py  test_smoke.py
tests/fixtures/: generate_fixture.py
tests/test_evidence/: fast_tests.txt  slow_tests.txt
ui/: api_client.py  app.py
