[project]
name = "object-identification"
version = "0.1.0"
description = "Async video analysis service: object detection, tracking, motion classification, and interaction detection."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
    "ultralytics>=8.3",
    "mediapipe>=0.10.18",
    "opencv-python>=4.10",
    "numpy>=1.26,<2.0",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.12",
    "requests>=2.32",
    "lap>=0.5.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
    "requests-mock>=1.12",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
    "requests-mock>=1.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with -m slow, skipped by default)",
]
addopts = "-m 'not slow'"
